--- a/.github/workflows/release-to-gh.yml
+++ b/.github/workflows/release-to-gh.yml
@@ -1,41 +1,43 @@
 name: Deploy to GitHub Releases/Packages
 
 on:
-  release:
-    types: [published]
+    release:
+        types: [published]
 
 jobs:
-  deploy:
-    name: Deploy Release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    deploy:
+        name: Deploy Release
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v2
 
-      - name: Install composer dependencies
-        uses: php-actions/composer@v2
-        with:
-          dev: no
+            - name: Install composer dependencies
+              uses: php-actions/composer@v2
+              with:
+                  dev: no
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: '16'
+            - name: Setup Node.js
+              uses: actions/setup-node@v1
+              with:
+                  node-version: '16'
 
-      - name: Install npm dependencies and build
-        run: |
-          npm ci
-          npm run build
+            - name: Install npm dependencies and build
+              run: |
+                  npm ci
+                  npm run build
 
-      - name: Generate plugin zip
-        run: |
-          mkdir -p release
-          zip -r release/plausible-analytics.zip . -x "*.git*" "node_modules/*" "tests/*"
+            - name: Generate plugin zip
+              run: |
+                  mkdir -p release
+                  zip -r release/plausible-analytics.zip . -x "*.git*" "node_modules/*" "tests/*"
 
-      - name: Upload to GitHub Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: release
+            - name: Upload to GitHub Release
+              uses: actions/upload-release-asset@v1
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                  upload_url: ${{ github.event.release.upload_url }}
+                  asset_path: release/plausible-analytics.zip
+                  asset_name: plausible-analytics.zip
+                  asset_content_type: application/zip
